# mobile-robot

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
install/control/share/control/: local_setup.sh  package.sh  package.xml
install/meta_launch/share/meta_launch/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
install/task/share/task/: package.sh
krai-ros-web-ui/src/scripts/: Config.js
log/: latest_build
micro_ros_publisher_wifi/: 01_MPU6050.ino  99_main.ino  micro_ros_publisher_wifi.ino
ros2_ws/: allow_udp_permission.sh
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/control/: CMakeLists.txt
ros2_ws/src/control/src/: control_node.cpp
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/kinematics/: CMakeLists.txt
ros2_ws/src/kinematics/src/: differential_drive.cpp
ros2_ws/src/launch/: CMakeLists.txt  package.xml
ros2_ws/src/launch/launch/: web.launch
ros2_ws/src/log/: latest_build
ros2_ws/src/meta_launch/: CMakeLists.txt
ros2_ws/src/meta_launch/launch/: microros_launch.py
ros2_ws/src/task/: setup.py
ros2_ws/src/task/task/: task.xml
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/devel/lib/control/: control_node
ros_ws/devel/lib/pkgconfig/: control.pc  launch.pc  rosserial_interface.pc  web_interface.pc
ros_ws/devel/lib/web_interface/: web_interface_node
ros_ws/src/control/: CMakeLists.txt
ros_ws/src/control/include/kinematics/: differential_drive.cpp  differential_drive.h
ros_ws/src/control/launch/: control.launch
ros_ws/src/control/src/: control_node.cpp
ros_ws/src/rosserial_interface/: CMakeLists.txt  package.xml
ros_ws/src/rosserial_interface/config/: rosserial_interface.yaml
ros_ws/src/rosserial_interface/include/rosserial_interface/: rosserial_interface.h
ros_ws/src/rosserial_interface/launch/: rosserial_interface.launch
ros_ws/src/rosserial_interface/src/rosserial_interface/: rosserial_interface.cpp
ros_ws/src/web_interface/: CMakeLists.txt  package.xml
ros_ws/src/web_interface/config/: web_interface.yaml
ros_ws/src/web_interface/include/web_interface/: web_interface.h
ros_ws/src/web_interface/launch/: web_interface.launch
ros_ws/src/web_interface/src/: web_interface_node.cpp
ros_ws/src/web_interface/src/web_interface/: web_interface.cpp
rosserial_esp/: 00_wifi.ino  01_ros.ino  02_motor.ino  99_main.ino  rosserial_esp.ino
web-ui/: package-lock.json  package.json
web-ui/src/: App.js
web-ui/src/components/: Footer.jsx  Header.jsx
web-ui/src/pages/: Teleop.jsx
web-ui/src/scripts/: Config.js
(+37 files in other folders)
